style.css
/* ... */
/* @media screen and (max-height: 600px) {
  .undergatesText {
    font-size: 110%;
    transform: translateY(150%);
  }

} */

@media screen and (max-width: 800px) {
  .line-1 {
    font-size: 280%;
  }

  .line-2 {
    font-size: 80%;
    margin-top: 15px;
  }

  .line-3 {
    font-size: 180%;
    margin-top: 15px;
  }

  .gates {
    left: 24%;
    top: 15%;
    width: 400px;
    height: 400px;
  }
  @keyframes mymove {
    from {
      left: 24%;
    }
    to {
      left: 0%;
    }
  }

  .photoCV {
    /* padding-top: 5vw; */
    transform: translateY(55%);
    top: 15%;
  }
  .photoCV img {
    height: 180;
  }

  @keyframes slidein {
    from {
      right: -130%;
    }

    to {
      right: 12%;
    }
  }

  @keyframes slideup {
    from {
      top: 15%;
    }

    to {
      top: 1%;
    }
  }

  .undergatesText {
    transform: translateY(1540%);
    font-size: 110%;
  }
}

@media screen and (max-width: 600px) {
  .line-1 {
    font-size: 150%;
  }

  .line-2 {
    font-size: 80%;
    margin-top: 15px;
  }

  .line-3 {
    font-size: 150%;
    margin-top: 15px;
  }

  .gates {
    left: 28%;
    top: 35%;
    width: 150px;
    height: 150px;
    transform: translateY(-55%);
  }
  @keyframes mymove {
    from {
      top: 35%;
    }
    to {
      top: 25%;
    }
  }

  .photoCV {
    /* padding-top: 5vw; */
    transform: translateY(55%);
    top: 25%;
    left: 24%;
    opacity: 0;
    animation: none;
    animation: showup 3s forwards 6.8s, slideup 1s 10.5s forwards;
  }
  .photoCV img {
    height: 180;
  }

  @keyframes showup {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }

  @keyframes slideup {
    from {
      top: 25%;
    }

    to {
      top: 15%;
    }
  }

  .undergatesText {
    display: none;
  }

  .undergatesButton {
    position: relative;
    top: 90%;
    right: -20%;
    /* animation: none; */
    animation: slidebutton 0s forwards 0s, slidebuttonup 1s forwards 2s;
  }

  @keyframes slidebutton {
    from {
      opacity: 1;
    }
    to {
      opacity: 0;
    }
  }

  @keyframes slidebuttonup {
    from {
      opacity: 0;
    }
    to {
      opacity: 1;
    }
  }

  body {
    background-size: 700% 700%;
    height: 100%;
    margin: 0;
  }
}

/* ////////////////////////// CENNIK /////////////////////////// */

.cennikdescrip {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin-bottom: 50px;
  width: 900px;
}

.odstepStart {
  height: 70px;
}

.odstepdownStart {
  height: 40px;
}

.cennikpart1 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin: 20px 150px;
}

.cennikpart1 p {
  margin-bottom: 50px;
}

.cennikpart1 .p1 {
  max-width: 600px;
}

.cennikpart1 h2 {
  text-align: center;
}

.cennikpart2,
.cennikpart3 {
  display: flex;
  flex-direction: row;
  text-align: center;
  justify-content: center;
  flex-wrap: wrap;
  margin-bottom: 60px;
}

.cennikpart2 .square1 {
  min-width: 400px;
}

.cennikpart2 img {
  max-height: 100px;
  width: auto;
  margin: 30px 20px 0 22px;
  transition: none;
}

.p1 {
  font-size: 18px;
}

.cennikpart3 img {
  max-height: 100px;
  width: auto;
  margin: 30px 20px 0 22px;
  transition: none;
}

.square11 {
  max-width: auto;
  min-width: 200px;
  min-height: auto;
  /* height: 360px; */
  /* margin: 0 20px 20px 20px; */
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  border: 2px dashed rgb(111, 111, 111);
  border-radius: 15px;
}

.bordrerix {
  height: 95%;
  border-left: 2px dashed rgb(111, 111, 111);
}

.square14 {
  width: 350px;
  padding: 0px 10px;
  margin: 5px;
  /* border: 2px solid peru; */
  align-self: flex-start;
}

#text-widt {
  text-align: center;
}

.leftInside {
  padding: 40px 0px;
  text-align: start;
  line-height: 1.6;
}

.grubacena {
  font-size: 35px;
}

.square141 {
  display: flex;
  width: auto;
  height: auto;
  padding: 0px 80px;
  margin: 5px;
  /* border: 2px solid peru; */
  align-self: flex-start;
  flex-direction: row;
}

.lines {
  line-height: 4;
}

.midInside {
  padding: 40px 0px;
  text-align: center;
}

.square241 {
  width: auto;
  height: auto;
  max-width: 300px;
  /* height: 360px; */
  /* margin: 0 20px 20px 20px; */
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border: 2px dashed rgb(111, 111, 111);
  border-radius: 15px;
  padding: 60px;
  margin: 20px;
}

.giganapis {
  font-size: 25px;
}

.line241 {
  line-height: 2;
}

.cennikpart1 ul {
  text-align: start;
  line-height: 1.8;
}

/* .rightInside ul {
  list-style-type: none;
} */

.szczegolowePakietybox {
  width: 85%;
  /* border: 2px solid peru; */
  height: auto;
  margin-top: 20px;
}

.pakiet {
  display: flex;
  position: relative;
  flex-direction: row;
  /* border: solid 2px peru; */
  justify-content: space-between;
  align-items: center;
}

.pakiet .leftInside {
  margin: 0 0 0 50px;
}

.pakietOpis {
  /* border: solid 2px rgb(77, 63, 205); */
  display: flex;
  flex-direction: column;
  width: 70%;
}

.pakiet .cennikpic1 {
  align-self: flex-end;
  justify-self: flex-end;
  margin: -110px 0 -10px 0;
  display: none;
}

.pakiet .cennikpic1 img {
  max-height: 80px;
}

.PakietOpisLines {
  line-height: 1.9;
}

.bordrerixPoziom {
  width: 220px;
  border-bottom: 2px dashed rgb(111, 111, 111);
  margin-left: -20px;
}

.pakietIkona {
  display: flex;
  align-self: center;
  margin: 0 -20px 0 0;
}

.pakietIkona img {
  max-height: 100px;
  width: auto;
  margin: 30px 20px 0 22px;
  transition: none;
}

.pakietIkona .square1 {
  padding-right: 10px;
}
/* ... */

